# rts

./: Cargo.toml  flake.nix  todo.md
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: k75zm8wydyrd8dcjyrg3bniww064881c-source
src/: animations.rs  grid.rs  inspector.rs  main.rs  mouse.rs  pointer.rs  warrior.rs
src/debug/: inspector.rs  mod.rs
src/units/: mod.rs  warrior.rs
